crates/aven-check/tests/fixtures/check/invalid/qualified-operator-missing-requirement.av
less: (t, t) -> Bool
less = (left, right) =>
  left < right
